# watchflow

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CNAME  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Dockerfile.dev  Improvement.md  LICENSE  LOCAL_SETUP.md  README.md  codecov.yml  docker-compose.yaml  env.example  justfile  linting_commands.txt  logging.ini  mkdocs.yml  pyproject.toml  start-dev.sh  test_feasibility_agent.py  test_feasibility_interactive.py
.cursor/rules/: guidelines.mdc
.github/workflows/: docs.yaml  docs.yml  eks-deploy.yaml  pre-commit-hooks.yaml  security-scan.yml  security.yml  tests.yaml  tests.yml
.watchflow/: rules info.txt  rules.yaml  rules_info.txt  testing.ipynb
docs/: CNAME  README.md  ai-agents.md  architecture.md  benchmarks.md  enterprise-rules-roadmap.md  features.md  index.md  status-check-rules-guide.md  temp.md
docs/assets/: mastra-watchflow-rules.yaml  threading-guardrails.yaml
docs/concepts/: overview.md
docs/getting-started/: configuration.md  diff-rule-presets.md  quick-start.md
docs/reports/: mastra-analysis.md
docs/samples/: mastra-watchflow-rules.yaml
docs/stylesheets/: extra.css
helm-chart/: values.yaml
scripts/: format  migrate_to_structlog.py  start-dev.sh  start-prod.sh
src/: __init__.py  main.py
src/agents/: __init__.py  base.py  factory.py
src/agents/acknowledgment_agent/: __init__.py  agent.py  models.py  prompts.py  test_agent.py
src/agents/engine_agent/: __init__.py  agent.py  models.py  nodes.py  prompts.py
src/agents/extractor_agent/: __init__.py  agent.py  models.py  prompts.py
src/agents/feasibility_agent/: __init__.py  agent.py  models.py  nodes.py  prompts.py
src/agents/repository_analysis_agent/: README.md  __init__.py  agent.py  metrics.py  models.py  nodes.py  prompts.py  test_agent.py
src/agents/reviewer_reasoning_agent/: __init__.py  agent.py  models.py  prompts.py
src/agents/reviewer_recommendation_agent/: __init__.py  agent.py  models.py  nodes.py
src/agents/supervisor_agent/: __init__.py  agent.py  models.py  nodes.py
src/api/: __init__.py  auth.py  dependencies.py  errors.py  rate_limit.py  recommendations.py  repos.py  rules.py  scheduler.py
src/core/: ai.py  config.py  constants.py  errors.py  models.py
src/core/ai_providers/: __init__.py  base.py  bedrock_provider.py  factory.py  garden_provider.py  openai_provider.py
src/core/config/: __init__.py  cache_config.py  cors_config.py  github_config.py  langsmith_config.py  logging_config.py  provider_config.py  repo_config.py  settings.py
src/core/utils/: README.md  __init__.py  caching.py  event_filter.py  github_oidc.py  logging.py  metrics.py  patterns.py  retry.py  timeout.py  violation_tracker.py
src/event_processors/: __init__.py  base.py  check_run.py  deployment.py  deployment_protection_rule.py  deployment_review.py  deployment_status.py  expertise_scheduler.py  factory.py  pull_request.py  push.py  reviewer_recommendation.py  rule_creation.py  status.py  violation_acknowledgment.py
src/event_processors/pull_request/: __init__.py  enricher.py  processor.py
src/event_processors/risk_assessment/: processor.py  signals.py
src/integrations/: README.md  __init__.py  aws_bedrock.py  codeowners.py  contributors.py  gcp_garden.py  github_api.py
src/integrations/github/: __init__.py  api.py  check_runs.py  client.py  graphql.py  graphql_client.py  models.py  rule_loader.py  rules_service.py  schemas.py  service.py
src/integrations/providers/: __init__.py  base.py  bedrock_provider.py  factory.py  openai_provider.py  vertex_ai_provider.py
src/presentation/: github_formatter.py
src/providers/: __init__.py  base_provider.py  bedrock_provider.py  factory.py  openai_provider.py  vertex_ai_provider.py
src/rules/: __init__.py  acknowledgment.py  ai_rules_scan.py  condition_evaluator.py  evaluator.py  github_provider.py  interface.py  models.py  registry.py  utils.py  validators.py  when_evaluator.py
src/rules/conditions/: __init__.py  access_control.py  access_control_advanced.py  base.py  compliance.py  filesystem.py  llm_assisted.py  pull_request.py  temporal.py  workflow.py
src/rules/loaders/: __init__.py  github_loader.py
src/rules/utils/: __init__.py  codeowners.py  contributors.py  diff.py  validation.py
src/services/: recommendation_metrics.py
src/tasks/: task_queue.py
src/tasks/scheduler/: deployment_scheduler.py
src/webhooks/: __init__.py  auth.py  dispatcher.py  models.py  router.py
src/webhooks/handlers/: __init__.py  base.py  check_run.py  deployment.py  deployment_protection_rule.py  deployment_review.py  deployment_status.py  issue_comment.py  pull_request.py  pull_request_review.py  pull_request_review_thread.py  push.py  status.py
tests/: conftest.py
tests/feedback/: test_abstract_classes.py  test_caching_strategy.py  test_condition_logic.py  test_processing_states.py  test_violation_deduplication.py
tests/integration/: test_github_graphql.py  test_recommendations.py  test_repo_analysis.py  test_rules_api.py  test_scan_ai_files.py
tests/integration/webhooks/: __init__.py  test_webhook_flow.py
tests/unit/: test_abstract_classes.py  test_agents.py  test_feasibility_agent.py  test_mastra_rules_sample.py  test_metrics.py  test_rule_engine_agent.py  test_rule_schema_compliance.py  test_status_check_integration.py
tests/unit/agents/: test_engine_agent.py  test_repository_analysis_models.py  test_repository_analysis_rendering.py  test_reviewer_recommendation_agent.py  test_rule_schema_compliance.py
tests/unit/api/: test_proceed_with_pr.py  test_recommendations.py
tests/unit/core/: test_event_filter.py  test_models.py
tests/unit/event_processors/: test_deployment_protection_rule.py  test_pull_request_processor.py  test_push_processor.py  test_risk_assessment_signals.py  test_violation_acknowledgment.py
tests/unit/presentation/: test_github_formatter.py  test_reviewer_formatter.py
tests/unit/rules/: test_acknowledgment.py  test_ai_rules_scan.py  test_diff_validators.py  test_loader_when_block.py  (+2 more)
(+21 files in other folders)
